src/styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
.receptacle {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  align-items: center;
  justify-content: space-evenly;
}
.prong {
  background: black;
  padding-top: 2em;
  max-width: 0.5em;
  grid-column: 1;
  position: relative;
  left: 43%;
  border: 3px inset white;
  margin-bottom: 0.2em;
}
.prong.first {
  margin-top: 1em;
}
.prong.small {
  grid-column: 2;
  align-self: center;
  padding-top: 1.5em;
  margin-top: auto;
  bottom: 10%;
}
.ground {
  grid-row: 2;
  grid-column: span 2;
  position: relative;
  left: 43%;

  background: black;
  padding-left: 0.35em;
  padding-right: 0.35em;
  padding-top: 1em;
  max-width: 0.5em;
  margin-bottom: 0;
  border-radius: 50%;
  border-bottom-right-radius: 0%;
  border-bottom-left-radius: 0%;
  border-bottom: 3px inset black;
}
.light-square:after {
  content: "";
  position: absolute;
  right: 20%;
  bottom: 5%;
  width: 0.5em;
  height: 0.65em;
  background-color: var(--light-square-color);
}

button,
button > span {
  text-transform: uppercase;
}
button {
  border: none;
  background: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

#buttons {
  gap: 0.2em;
  padding: 0 1.5em;
  padding-bottom: 1em;
}
#buttons button {
  padding: 0.25em 1em;
  font-size: 9px;
  letter-spacing: 0.1em;
}
.test {
  background: black;
  color: rgba(200, 200, 200, 0.5);
  border: 3px solid black;
}
.test:active {
  --light-square-color: "black";
  border: 3px inset;
}
.reset {
  --reset: rgb(220, 20, 30);
  background: var(--reset);
  color: rgba(200, 200, 200, 0.5);
  border: 3px solid var(--reset);
}
.reset:active {
  border-style: inset;
  /* --light-square-color: var(--square-ok); */
  --light-square-color: "green";
}

.off {
  border: 3px outset;
  box-shadow: 0 0 3px black;
}
.on {
  border: 3px inset;
  box-shadow: 0 0 3px dimgray inset;
}

.outer {
  background: ghostwhite;
  padding: 0.25em 2em;
  position: relative;
  border-radius: 10px;
}
.outer:after {
  content: "";
  position: absolute;
  top: 100%;
  left: 20%;
  width: 2em;
  height: 0.5em;
  background: green;
  background-image: linear-gradient(
    to right,
    green,
    olivedrab,
    darkgreen,
    darkolivegreen,
    darkgreen
  );
  border-top: 2px solid darkgreen;
  border-radius: 4px;
}

.outer hr {
  position: absolute;
  width: 90%;
  top: 48%;
  left: 0%;
  height: 1em;
  border: none;
  border-left: 10px solid black;
  border-right: 10px solid black;
}
main {
  padding: 1em;
  border-radius: 10px;
  box-shadow: 0px -1px 5px silver;
}
/* utilities */
:root {
  --light-square-color: black;
  --square-ok: rgba(0, 255, 0, 0.8);
  background: darkslategray;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
}
.fl-col {
  display: flex;
  flex-direction: column;
}
.infl {
  display: inline-flex;
}
.bg {
  background-color: ghostwhite;
}
.upside-down {
  transform: rotate(180deg);
}
.btn {
  color: ghostwhite;
  padding: 0.5em 1em;
  border-radius: 6px;
  background: darkolivegreen;
  box-shadow: -1px 1px 3px 1px gray;
}
.btn:hover {
  transition: 0.2s;
  background: rgb(46, 145, 46);
}
@keyframes pressButton {
  0% {
    box-shadow: -1px 1px 3px 1px gray;
  }
  50% {
    box-shadow: 0px 0px 0px 0px rgb(46, 145, 46);
  }
  100% {
    box-shadow: 1px -1px 6px 2px darkgreen inset;
  }
}
.btn:active {
  animation: pressButton 0.1s linear forwards;
}
/* instructions */
.instructions {
  position: fixed;
  right: 0%;
  top: 0%;
  margin-top: 10px;
  margin-right: 16px;
  padding: 1em;
  font-family: "Inter", Helvetica, Arial, sans-serif;
  background: ghostwhite;
  box-shadow: -1px 1px 8px 7px #203636;
  border-radius: 6px;
}
.bottom {
  top: unset;
  bottom: 0%;
  margin-bottom: 10px;
}

@media screen and (max-width: 900px) {
  .instructions {
    font-size: 16px;
    padding: 0.5em;
    max-width: 20ch;
    left: 0%;
    margin-right: 0;
    margin-left: 10px;
  }
}
@media screen and (max-width: 450px) {
  .instructions {
    position: initial;
    top: unset;
    right: unset;
    left: unset;
    width: 100%;
    margin: 0;
    margin-top: 1.2em;
  }
}

@media screen and (max-height: 690px) {
  .App {
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    width: min-content;
  }
  .instructions {
    position: initial;
    top: unset;
    right: unset;
    left: unset;
    width: 100%;
    margin: 0;
    margin-bottom: 1.2em;
  }
}

